Applied user-select:none to child elements to fix text selection issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -388,7 +388,7 @@ header {
 
 .mainNavSmallScreen li:hover {
     background-color: #000;
-    /* cursor: pointer; */
+    cursor: pointer;
     transition: background-color 0.1s ease;
 }
 
